<resources>
    <string name="app_name">FoodRecipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="logout_button">Logout</string>
    <string name="setting">Setting</string>
    <string name="drawerTitle">Menu</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title_text">Local Tastes</string>
    <string name="to_find_recipe_button_text">Browse Recipes</string>
    <string name="find_recipe_title_text">Browse Recipes</string>
    <string name="find_recipe_text_box_hint">Cinnamon Pumpkin Waffles</string>
    <string name="find_recipe_button_text">Find Recipes</string>
<<<<<<< HEAD
    <string name="find_recipe_general_paragraph">Here you can search a curated list of the top rated, local favorite recipes near you</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="name_hint">Enter a Recipe Name</string>
    <string name="ingredients_hint">Enter the Ingredients needed here</string>
    <string name="directions_hint">Enter the directions here</string>
    <string name="submit_recipe_button">Submit</string>
    <string name="image_url">Enter a Image URL Here</string>
=======
    <string name="find_recipe_general_paragraph">Here you can browse a curated list of the top rated, local favorite recipes near you</string>
>>>>>>> master
</resources>
