<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title_background_2">

        <TextView
            android:id="@+id/main_title_text_view"
            android:layout_width="319dp"
            android:layout_height="220dp"
            android:background="#D8FFFBE6"
            android:fontFamily="@font/montserrat"
            android:text="@string/main_title_text"
            android:textAlignment="center"
            android:textColor="@color/main_olive"
            android:textSize="80sp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <Button
            android:id="@+id/to_find_recipe_button"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:background="#D5FFFBE6"
            android:fontFamily="@font/montserrat"
            android:text="@string/to_find_recipe_button_text"
            android:textColor="@color/main_olive"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title_text_view" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/to_find_recipe_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
